--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-toast-message": "^2.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
